<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrUpdateTask">
    <TextView
        android:id="@+id/tv_add_task"
        android:text="@string/add_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/et_task_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/et_task_description"
        app:layout_constraintTop_toBottomOf="@id/tv_add_task"
        app:layout_constraintBottom_toTopOf="@id/tv_add_task"
        app:layout_constraintRight_toRightOf="@id/et_task_description"/>

    <TextView
        android:id="@+id/tv_add_description"
        android:text="@string/add_task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_add_task"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/et_task_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintLeft_toRightOf="@id/tv_add_description"
        app:layout_constraintTop_toBottomOf="@id/tv_add_description"
        app:layout_constraintBottom_toTopOf="@id/tv_add_description"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        app:layout_constraintTop_toBottomOf="@id/et_task_description"
        app:layout_constraintRight_toRightOf="@id/et_task_description"/>
</android.support.constraint.ConstraintLayout>